[package]
name = "RGB-HEX"
version = "0.1.0"
authors = ["re1101 <romaro1101@gmail.com>"]
rust-version = "1.82"
edition = "2021"
description = "Small RUST app to convert from RGB to HEX and backwards"
readme = "README.md"
repository = "https://github.com/re1101/RGB-HEX"
publish = false

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"

[[bin]]
name = "main"
path = "src/main.rs"
